feat(hal/gles): add Pure Go OpenGL ES backend
Implement complete OpenGL ES 3.0 / OpenGL 3.3 backend using syscall.SyscallN
(no CGO, no purego, no external dependencies).

Components:
- gl/: OpenGL constants (263) and function wrappers (~80 functions)
- wgl/: Windows WGL context management
- Backend, Instance, Adapter, Device, Queue implementations
- CommandEncoder with command recording pattern
- Resource types: Buffer, Texture, Surface, Pipeline, etc.

Tests:
- 94 unit tests for command recording, format conversion, GL constants
- 16.8% coverage (CPU-only tests, GPU tests require window)

Also:
- Update .golangci.yml with GLES exclusions
- Update pre-release script to filter known unsafe.Pointer usage

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -148,6 +148,18 @@ linters:
           - funlen
           - gosec
 
+      # GL context - requires unsafe for C interop
+      - path: hal/gles/gl/context\.go
+        linters:
+          - govet
+        text: "possible misuse of unsafe.Pointer"
+
+      # GL context - syscall returns are intentionally unchecked
+      # (GL errors are checked via glGetError, not syscall return values)
+      - path: hal/gles/gl/context\.go
+        linters:
+          - errcheck
+
       # Internal utilities
       - path: internal/.*\.go
         linters:
