--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,13 @@ name: CI
 #
 # Branch Strategy (GitHub Flow):
 # - main branch: Production-ready code
-# - feat/** branches: Feature development
-# - fix/** branches: Bug fixes
+# - Feature branches: Tested via pull_request trigger
 # - Pull requests: Must pass all checks before merge
 
 on:
   push:
     branches:
       - main
-      - 'feat/**'
-      - 'fix/**'
   pull_request:
     branches:
       - main
