feat(gles): VAO, viewport, blend state, bind group commands
- Add persistent VAO creation in Device for Core Profile compatibility
- Set viewport at render pass start (required for correct rendering)
- Implement SetBindGroup with UBO and texture binding
- Add blend state support in CreateRenderPipeline
- Add GL wrapper functions: BlendFuncSeparate, BlendEquationSeparate,
  Enable, Disable, GenVertexArrays, BindVertexArray, DeleteVertexArrays
- Fix WriteBuffer/WriteTexture to use correct GL binding patterns
- Remove debug shader GLSL logging

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -154,6 +154,14 @@ linters:
           - govet
         text: "possible misuse of unsafe.Pointer"
 
+      # GLES command encoder - uintptr handles from gputypes.BindingResource
+      # are actually Go pointers (set in CreateBindGroup), converted back via unsafe.Pointer.
+      # Same pattern used in DX12 backend (hal/dx12/device.go).
+      - path: hal/gles/command\.go
+        linters:
+          - govet
+        text: "possible misuse of unsafe.Pointer"
+
       # GL context - syscall returns are intentionally unchecked
       # (GL errors are checked via glGetError, not syscall return values)
       - path: hal/gles/gl/context\.go
